--- a/src/main/webapp/gwtsample.html
+++ b/src/main/webapp/gwtsample.html
@@ -6,7 +6,7 @@
 
     <title>Web Application Starter Project</title>
 
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="css/base.css">
     
     <script src="gwtsample/gwtsample.nocache.js"></script>
   </head>
